SERVER-74264 Fix incorrect $$NOW behavior in projection of find